Add unit tests for main and details viewmodels